--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MyRideHub</string>
+
+    <!-- Spinner Items for My Order -->
+    <string-array name="history_types">
+        <item>Booking History</item>
+        <item>Renting History</item>
+    </string-array>
 </resources>
